sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: type bBoolean
  var swapped:bBoolean =true
              ^AlgCocktailSort1:12: error: not found: value k
      if (plusPetit(k,k+1)){
                    ^AlgCocktailSort1:12: error: not found: value k
      if (plusPetit(k,k+1)){
                      ^AlgCocktailSort1:13: error: not found: value k
        echange(k,k+1)
                ^AlgCocktailSort1:13: error: not found: value k
        echange(k,k+1)
                  ^